# EYE_CSS

./: .gitignore  README.md  eye_css_generator.py  eye_gen.css  font_generator.py  main.html  nine_index.html  pyproject.toml  requirements.txt  test.css  watched_eye.css  watcher.py
eye_css/: __init__.py  __main__.py  eye_css_generator.py  eye_watcher.py
