[project]
name = "eye_css"
version = "0.1.4"
authors = [
    { name = "Mayowa Obisesan", email = "mayowaobi74@gmail.com" },
]
description = "A dynamic utility-first css library written in python"
readme = "README.md"
license = { text = "LICENSE" }
keywords = ["Eye CSS", "CSS", "CSS Library", "Utility-First CSS", "Python CSS", "Web EyeCSS"]
#requires-python = "3"
dependencies = ['watchdog~=2.1.9', 'PyYAML']
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/BMayowa/EYE_CSS"
"Bug Tracker" = "https://github.com/BMayowa/EYE_CSS/issues"